update to autoplay

--- a/HTML/game.html
+++ b/HTML/game.html
@@ -36,6 +36,10 @@
         localStorage.removeItem('score');
         updatescoreElement();
     " class="reset">Reset score</button>
+
+    <button class="auto-play-button" onclick="
+        autoPlay();
+    ">Auto Play</button>
     <script src="../JAVASCRIPT/game.js"></script>
 </body>
 </html>
