--- a/index.html
+++ b/index.html
@@ -8,19 +8,13 @@
 </head>
 <body>
     <h1 > Rock Paper Scissors</h1>
-    <button onclick="
-        playGame('Rock');
-    " class="move-button">
+    <button class="move-button js-rock-btn">
     <img src="../images/rock-emoji.png" class="move-icon">
     </button>
-    <button onclick="
-        playGame('Paper');
-    " class="move-button">
+    <button class="move-button js-paper-btn">
     <img src="../images/paper-emoji.png" class="move-icon">
     </button>
-    <button onclick="
-        playGame('Scissors');
-    " class="move-button">
+    <button class="move-button js-scissor-btn">
     <img src="../images/scissors-emoji.png" class="move-icon">
     </button>
 
@@ -29,17 +23,18 @@
     <p class="js-score score"></p>
 
 
-    <button onclick="
-        score.win=0,
-        score.losse=0,
-        score.tie =0,
-        localStorage.removeItem('score');
-        updatescoreElement();
-    " class="reset">Reset score</button>
+  
+  <button class="reset-score-button js-reset-score-button">
+    Reset Score
+  </button>
 
-    <button class="auto-play-button" onclick="
-        autoPlay();
-    ">Auto Play</button>
+  
+  <button class="auto-play-button js-auto-play-button">
+    Auto Play
+  </button>
+
+  
+  <p class="js-reset-confirmation"></p>
     <script src="../JAVASCRIPT/game.js"></script>
 </body>
 </html>
